--- a/shoppingIOS/shoppingIOS/Base.lproj/Main.storyboard
+++ b/shoppingIOS/shoppingIOS/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7a0-Et-H21" userLabel="Container">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="431.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="457.5"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fQX-C7-8E6" userLabel="Picture">
                                                 <rect key="frame" x="86" y="40" width="203" height="203"/>
@@ -95,24 +95,24 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lMM-Qh-jD9" customClass="ComboRow" customModule="shoppingIOS" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="305.5" width="160" height="28"/>
+                                                <rect key="frame" x="20" y="317.5" width="160" height="28"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="160" id="EhK-Fl-diz"/>
                                                     <constraint firstAttribute="height" constant="28" id="rnc-K9-gzi"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZhO-Zw-Wsy" userLabel="Flavors" customClass="FlavorRow" customModule="shoppingIOS" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="349.5" width="170" height="28"/>
+                                                <rect key="frame" x="20" y="361.5" width="170" height="28"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="170" id="7gb-Hx-2aT"/>
                                                     <constraint firstAttribute="height" constant="28" id="bvH-YU-rR4"/>
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2zc-fp-S2S">
-                                                <rect key="frame" x="20" y="393.5" width="335" height="38"/>
+                                                <rect key="frame" x="20" y="415.5" width="335" height="42"/>
                                                 <color key="backgroundColor" red="0.0" green="0.49019607840000001" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="38" id="Wz9-Av-2aw"/>
+                                                    <constraint firstAttribute="height" constant="42" id="Wz9-Av-2aw"/>
                                                 </constraints>
                                                 <state key="normal" title="立即购买">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -135,7 +135,7 @@
                                             <constraint firstAttribute="trailing" secondItem="2zc-fp-S2S" secondAttribute="trailing" constant="20" id="3iX-jd-bBj"/>
                                             <constraint firstItem="fQX-C7-8E6" firstAttribute="top" secondItem="7a0-Et-H21" secondAttribute="top" constant="40" id="C5A-vp-pY1"/>
                                             <constraint firstAttribute="trailing" secondItem="MbB-fj-W67" secondAttribute="trailing" constant="20" id="Crg-nM-eHc"/>
-                                            <constraint firstItem="lMM-Qh-jD9" firstAttribute="top" secondItem="MbB-fj-W67" secondAttribute="bottom" constant="16" id="HiQ-ff-iIS"/>
+                                            <constraint firstItem="lMM-Qh-jD9" firstAttribute="top" secondItem="MbB-fj-W67" secondAttribute="bottom" constant="28" id="HiQ-ff-iIS"/>
                                             <constraint firstItem="fQX-C7-8E6" firstAttribute="leading" secondItem="7a0-Et-H21" secondAttribute="leading" constant="86" id="KWB-bk-aVk"/>
                                             <constraint firstItem="ZhO-Zw-Wsy" firstAttribute="top" secondItem="lMM-Qh-jD9" secondAttribute="bottom" constant="16" id="Mju-yf-liJ"/>
                                             <constraint firstAttribute="trailing" secondItem="fQX-C7-8E6" secondAttribute="trailing" constant="86" id="Qsm-rg-h0a"/>
@@ -149,6 +149,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="7a0-Et-H21" secondAttribute="bottom" id="FnM-Gm-P7D"/>
                                     <constraint firstItem="7a0-Et-H21" firstAttribute="width" secondItem="3w8-2y-6lc" secondAttribute="width" id="NbN-Vg-DOc"/>
@@ -158,7 +159,7 @@
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3w8-2y-6lc" firstAttribute="top" secondItem="zyh-AC-wKC" secondAttribute="top" id="EGt-A1-FwI"/>
                             <constraint firstItem="3w8-2y-6lc" firstAttribute="leading" secondItem="zyh-AC-wKC" secondAttribute="leading" id="NiJ-xj-L8f"/>
