--- a/shoppingIOS/shoppingIOS/Login/Login.storyboard
+++ b/shoppingIOS/shoppingIOS/Login/Login.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,16 +29,19 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fdf-8G-WLx" userLabel="Container">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="384"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="466"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZJy-Yq-2A9">
-                                                <rect key="frame" x="60" y="160" width="255" height="30"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZJy-Yq-2A9">
+                                                <rect key="frame" x="60" y="242" width="255" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <action selector="onUserNameChanged:" destination="MgL-ap-ulF" eventType="editingChanged" id="5vg-uz-jRY"/>
+                                                </connections>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zci-BL-WtA">
-                                                <rect key="frame" x="80" y="304" width="215" height="30"/>
+                                                <rect key="frame" x="80" y="386" width="215" height="30"/>
                                                 <state key="normal" title="登录">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -45,21 +49,33 @@
                                                     <action selector="onLoginButtonTap:" destination="MgL-ap-ulF" eventType="touchUpInside" id="GVW-wz-o2w"/>
                                                 </connections>
                                             </button>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XC8-7C-l9Q">
-                                                <rect key="frame" x="60" y="214" width="255" height="30"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XC8-7C-l9Q">
+                                                <rect key="frame" x="60" y="296" width="255" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <action selector="onPasswordChanged:" destination="MgL-ap-ulF" eventType="editingChanged" id="vye-w9-1U3"/>
+                                                </connections>
                                             </textField>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginLogo" translatesAutoresizingMaskIntoConstraints="NO" id="b8m-57-rfu">
+                                                <rect key="frame" x="122" y="80" width="130" height="130"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="b8m-57-rfu" secondAttribute="height" multiplier="1:1" id="AlY-iW-xsh"/>
+                                                    <constraint firstAttribute="width" constant="130" id="t9b-5B-HDW"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="0.49019607843137253" blue="0.76470588235294112" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstItem="b8m-57-rfu" firstAttribute="top" secondItem="fdf-8G-WLx" secondAttribute="top" constant="80" id="AFX-kg-6EN"/>
+                                            <constraint firstItem="ZJy-Yq-2A9" firstAttribute="top" secondItem="b8m-57-rfu" secondAttribute="bottom" constant="32" id="AT0-CX-PtC"/>
                                             <constraint firstItem="XC8-7C-l9Q" firstAttribute="leading" secondItem="fdf-8G-WLx" secondAttribute="leading" constant="60" id="Ebm-Qs-miI"/>
                                             <constraint firstAttribute="trailing" secondItem="XC8-7C-l9Q" secondAttribute="trailing" constant="60" id="F9A-kA-U7k"/>
                                             <constraint firstItem="ZJy-Yq-2A9" firstAttribute="leading" secondItem="fdf-8G-WLx" secondAttribute="leading" constant="60" id="HLf-MP-29j"/>
                                             <constraint firstAttribute="trailing" secondItem="ZJy-Yq-2A9" secondAttribute="trailing" constant="60" id="IHT-lP-v7u"/>
-                                            <constraint firstItem="ZJy-Yq-2A9" firstAttribute="top" secondItem="fdf-8G-WLx" secondAttribute="top" constant="160" id="LPR-Wt-fvK"/>
                                             <constraint firstAttribute="trailing" secondItem="zci-BL-WtA" secondAttribute="trailing" constant="80" id="NGY-2t-8Rj"/>
+                                            <constraint firstItem="b8m-57-rfu" firstAttribute="centerX" secondItem="fdf-8G-WLx" secondAttribute="centerX" id="Ntb-Fs-5YT"/>
                                             <constraint firstItem="zci-BL-WtA" firstAttribute="top" secondItem="XC8-7C-l9Q" secondAttribute="bottom" constant="60" id="WZC-Vb-8ZV"/>
                                             <constraint firstItem="XC8-7C-l9Q" firstAttribute="top" secondItem="ZJy-Yq-2A9" secondAttribute="bottom" constant="24" id="YLh-Kk-VGa"/>
                                             <constraint firstAttribute="bottom" secondItem="zci-BL-WtA" secondAttribute="bottom" constant="50" id="jOe-ZB-FpA"/>
@@ -100,4 +116,7 @@
             <point key="canvasLocation" x="156" y="197.45127436281859"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="loginLogo" width="150" height="150"/>
+    </resources>
 </document>
